--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>CoinStats Swap'n'Win Giveaway</title>
+	<title>CoinStats Swap'n'Win Giveaway by Hexens</title>
 	<link rel="icon" href="https://web.archive.org/web/20211012094749im_/https://super-static-assets.s3.amazonaws.com/d1104afc-abba-4b83-a735-ac5a38819976/images/26a0addd-891e-4431-a196-6caf0502d62b.png">
 	<meta name="description" content="Since CoinStats has launched its newest DeFi Swapping feature, we've decided to give away $5,000 in Ethereum to celebrate. Opt in and then swap — buy or sell — at least $100 of any coin on CoinStats by 10/28/2022 for your chance to win. Giveaway limited to one entry per person. Opting in multiple times will not increase your chance of winning.">
     <meta name="twitter:card" content="summary_large_image">
